# python-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: Dockerfile  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __main__.py  _main.py
{{ cookiecutter.project_slug }}/tests/: main_test.py
